--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,16 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Dependencies
+node_modules/
+# Note: package-lock.json should be committed for consistent dependency versions
+# yarn.lock
+# pnpm-lock.yaml
+
+# Build outputs
+dist/
+dist-ssr/
+.angular/
 *.local
 
 # Editor directories and files
@@ -22,3 +29,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# OS files
+Thumbs.db
