--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "preview": "ng serve --configuration=production"
   },
   "dependencies": {
-    "rxjs": "^7.8.2",
-    "@angular/common": "^20.3.0",
-    "@angular/platform-browser": "^20.3.0",
-    "@angular/compiler": "^20.3.0",
-    "@angular/core": "^20.3.0",
-    "@angular/forms": "^20.3.10",
-    "@angular/router": "^20.3.10",
     "@angular/build": "^20.3.0",
     "@angular/cli": "^20.3.0",
+    "@angular/common": "^20.3.0",
+    "@angular/compiler": "^20.3.0",
     "@angular/compiler-cli": "^20.3.0",
+    "@angular/core": "^20.3.0",
+    "@angular/forms": "^20.3.10",
+    "@angular/platform-browser": "^20.3.0",
+    "@angular/router": "^20.3.10",
+    "lucide-angular": "^0.554.0",
+    "ngx-sonner": "^3.1.0",
+    "rxjs": "^7.8.2",
     "tailwindcss": "latest"
   },
   "devDependencies": {
