--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "ng serve --configuration=production"
   },
   "dependencies": {
+    "@angular/animations": "^20.3.15",
     "@angular/build": "^20.3.0",
     "@angular/cli": "^20.3.0",
     "@angular/common": "^20.3.0",
